--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Watts-Strogatz BFS Wavefront Tracker</title>
+    <title>Small World Sim: Watts-Strogatz BFS Tracker</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap');
@@ -75,7 +75,7 @@
 
     <div id="hudPanel" class="panel">
         <div class="panel-header">
-            <span class="text-[10px] font-bold text-slate-300 uppercase tracking-widest">Phase Space Metrics</span>
+            <span class="text-[10px] font-bold text-slate-300 uppercase tracking-widest">Topologies</span>
             <button class="minimize-btn" data-target="hudPanel">—</button>
         </div>
         <div class="panel-content">
